ndb - bug#52298 - remove extra unneccesary (but harmless) wakeups for scan